--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
         <div class="col-md-4">
             <div class="form-group">
                 <label for="search">Find your car</label>
-                <input type="text" class="form-control" id="search" placeholder="Name , model ...">
+								<input type="text" 
+								class="form-control" 
+								id="search" 
+								placeholder="Name , model ..."
+								v-model="search">
             </div>
             <hr>
             <ul class="list-group">
-                <li v-for="car in cars"class="list-group-item list-group-item-action pointer">
+                <li v-for="(car, index) of filteredCars"
+                class="list-group-item list-group-item-action pointer" 
+                @click = "selectCar(index)" 
+                :class="{'active': selectedCarIndex === index}">
                     {{ car.name }} - {{ car.model }}
                 </li>
             </ul>
@@ -30,23 +37,68 @@
         <div class="col-md-8">
             <div class="row">
                 <div class="col-md-5">
-                    <h2>Ford</h2>
-                    <img src="image/fordfocus.jpg" alt="" class="rounded detailed-car-image">
+                    <h2>{{ car.name }}</h2>
+                    <img 
+                    :src="car.image" 
+                    :alt="car.name" 
+                    class="rounded detailed-car-image">
                 </div>
                 <div class="col-md-7">
                     <h5>Car details</h5>
                     <ul>
-                        <li>Model - <strong>Focus</strong></li>
-                        <li>Year - <strong>2015</strong></li>
-                        <li>Owner - <strong>Dima</strong></li>
-                    </ul>
-                    <p>+7 921 123 45 67</p>
-                    <button class="btn btn-primary">Buy</button>
-                    <button class="btn btn-outline-success">Show phone</button>
+                        <li>Model - <strong>{{ car.model }}</strong></li>
+                        <li>Year - <strong>{{ car.year }}</strong></li>
+                        <li>Owner - <strong>{{ car.owner }}</strong></li>
+										</ul>
+                    <p v-if="phoneVisibility">{{ car.phone }}</p>
+                    <button class="btn btn-primary" @click ="modalVisibility = true">Buy</button>
+										<button class="btn btn-outline-success" 
+										@click ="phoneVisibility = !phoneVisibility"
+										v-text="phoneBtnText"></button>
                 </div>
             </div>
         </div>
-    </div>
+		</div>
+		<div class="row" v-if="logs.length !== 0">
+			<div class="col-md-12">
+				<ul class="list-grop">
+					<li class="list-group-item" v-for="log in logs" 
+					:class="{
+						'list-group-item-secondary' : log.type === 'cnl' , 
+						'list-group-item-success' : log.type === 'ok'}">{{ log.text }} {{ log.date | date }}</li>
+				</ul>
+			</div>
+		</div>
+		<div class="modal fade show" v-if="modalVisibility" tabindex="-1" role="dialog">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title">Do you want to by this car?</h5>
+						<button 
+						type="button" 
+						class="close" 
+						data-dismiss="modal" 
+						aria-label="Close"
+						@click ="modalVisibility = false">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p> Current car <strong>{{ car.name }}</strong></p>
+						<ul>
+							<li>Model - <strong>{{ car.model }}</strong></li>
+							<li>Year - <strong>{{ car.year }}</strong></li>
+							<li>Owner - <strong>{{ car.owner }}</strong></li>
+					</ul>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary" @click ="newOrder">Buy</button>
+						<button type="button" class="btn btn-secondary" data-dismiss="modal" @click ="cansleOrder">Cancle</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal-backdrop fade show " v-if="modalVisibility"></div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="app.js"></script>
