--- a/index.html
+++ b/index.html
@@ -1,87 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
-    <title>VueJS</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="index.css">
+	<title>VueJS</title>
 </head>
 <body>
+<!--Общий контейнер-->
 <div class ="container" id="app">
-    <div class="row">
-        <div class="col">
-            <h1>Cars Application</h1>
-        </div>
+  <div class="row">
+    <div class="col">
+      <h1>Cars Application</h1>
     </div>
-    <div class="row">
-        <div class="col-md-4">
-            <div class="form-group">
-                <label for="search">Find your car</label>
-								<input type="text" 
-								class="form-control" 
-								id="search" 
-								placeholder="Name , model ..."
-								v-model="search">
-            </div>
-            <hr>
-            <ul class="list-group">
-                <li v-for="(car, index) of filteredCars"
-                class="list-group-item list-group-item-action pointer" 
-                @click = "selectCar(index)" 
-                :class="{'active': selectedCarIndex === index}">
-                    {{ car.name }} - {{ car.model }}
-                </li>
-            </ul>
-        </div>
-        <div class="col-md-8">
-            <div class="row">
-                <div class="col-md-5">
-                    <h2>{{ car.name }}</h2>
-                    <img 
-                    :src="car.image" 
-                    :alt="car.name" 
-                    class="rounded detailed-car-image">
-                </div>
-                <div class="col-md-7">
-                    <h5>Car details</h5>
-                    <ul>
-                        <li>Model - <strong>{{ car.model }}</strong></li>
-                        <li>Year - <strong>{{ car.year }}</strong></li>
-                        <li>Owner - <strong>{{ car.owner }}</strong></li>
-										</ul>
-                    <p v-if="phoneVisibility">{{ car.phone }}</p>
-                    <button class="btn btn-primary" @click ="modalVisibility = true">Buy</button>
-										<button class="btn btn-outline-success" 
-										@click ="phoneVisibility = !phoneVisibility"
-										v-text="phoneBtnText"></button>
-                </div>
-            </div>
-        </div>
+	</div>
+<!--Начало Левого меню-->
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="search">Find your car</label>
+					<input type="text" class="form-control" id="search" placeholder="Name , model ..." v-model="search">
+      </div>
+      <hr>
+      <ul class="list-group">
+        <li v-for="(car, index) of filteredCars" class="list-group-item list-group-item-action pointer" @click = "selectCar(index)" :class="{'active': selectedCarIndex === index}">{{ car.name }} - {{ car.model }}</li>
+      </ul>
 		</div>
+<!--Начало Правого меню-->
+    <div class="col-md-8">
+      <div class="row">
+				<div class="col-md-5"><h2>{{ car.name }}</h2>
+					<img :src="car.image" :alt="car.name" class="rounded detailed-car-image">
+				</div>
+					<div class="col-md-7">
+					<h5>Car details</h5>
+						<ul>
+							<li>Model - <strong>{{ car.model }}</strong></li>
+							<li>Year - <strong>{{ car.year }}</strong></li>
+							<li>Owner - <strong>{{ car.owner }}</strong></li>
+						</ul>
+						<transition name="phone">
+							<p v-if="phoneVisibility">{{ car.phone }}</p>
+						</transition>
+						<button class="btn btn-primary" @click ="modalVisibility = true">Buy</button>
+						<button class="btn btn-outline-success" @click ="phoneVisibility = !phoneVisibility" v-text="phoneBtnText"></button>
+					</div>
+      </div>
+    </div>
+	</div>
 		<div class="row" v-if="logs.length !== 0">
 			<div class="col-md-12">
 				<ul class="list-grop">
-					<li class="list-group-item" v-for="log in logs" 
-					:class="{
-						'list-group-item-secondary' : log.type === 'cnl' , 
-						'list-group-item-success' : log.type === 'ok'}">{{ log.text }} {{ log.date | date }}</li>
+					<li class="list-group-item" v-for="log in logs" :class="{'list-group-item-secondary' : log.type === 'cnl' , 'list-group-item-success' : log.type === 'ok'}">{{ log.text }} {{ log.date | date }}</li>
 				</ul>
 			</div>
 		</div>
-		<div class="modal fade show" v-if="modalVisibility" tabindex="-1" role="dialog">
+<!--Модальное окно-->
+		<transition name="modal">
+			<div class="modal fade show" v-if="modalVisibility" tabindex="-1" role="dialog">
+		</transition>
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title">Do you want to by this car?</h5>
-						<button 
-						type="button" 
-						class="close" 
-						data-dismiss="modal" 
-						aria-label="Close"
-						@click ="modalVisibility = false">
-							<span aria-hidden="true">&times;</span>
-						</button>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"@click ="modalVisibility = false"><span aria-hidden="true">&times;</span></button>
 					</div>
 					<div class="modal-body">
 						<p> Current car <strong>{{ car.name }}</strong></p>
@@ -98,8 +81,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="modal-backdrop fade show " v-if="modalVisibility"></div>
+	<div class="modal-backdrop fade show " v-if="modalVisibility"></div>
 </div>
+<!--скрипты-->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="app.js"></script>
 </body>
